--- a/marry.html
+++ b/marry.html
@@ -83,7 +83,7 @@
     🎉 YAY NOW WE MARRIED!!! 💖
 </h1>
 
-<img id="teddy" src="teddy.gif" alt="Teddy Bear">
+<img id="kitty" src="kitty.gif" alt="kitty">
 
 <script>
     let size = 1;
@@ -116,7 +116,8 @@
         }, 500);
     }
 </script>
-<img id="teddy" src="teddy.gif" alt="Teddy Bear">
+<img id="kitty" src="kitty.gif" alt="kitty">
 
 </body>
 </html>
+
